# serializer version: 1
# name: test_system_warnings[default]
  list([
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432521'): Active fault: 2024-12-17T17:10:57+00:00 TempZoneActuatorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432576'): Active fault: 2024-05-01T01:00:00+01:00 TempZoneSensorCommunicationLost",
    ),
  ])
# ---
# name: test_system_warnings[hass_118169]
  list([
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432521'): Active fault: 2024-12-17T17:10:57+00:00 TempZoneActuatorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432576'): Active fault: 2024-05-01T01:00:00+01:00 TempZoneSensorCommunicationLost",
    ),
  ])
# ---
# name: test_system_warnings[hass_139906]
  list([
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432521'): Active fault: 2024-12-17T17:10:57+00:00 TempZoneActuatorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432576'): Active fault: 2024-05-01T01:00:00+01:00 TempZoneSensorCommunicationLost",
    ),
  ])
# ---
# name: test_system_warnings[hass_139945]
  list([
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432521'): Active fault: 2024-12-17T17:10:57+00:00 TempZoneActuatorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432576'): Active fault: 2024-05-01T01:00:00+01:00 TempZoneSensorCommunicationLost",
    ),
  ])
# ---
# name: test_system_warnings[hass_140194]
  list([
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432521'): Active fault: 2024-12-17T17:10:57+00:00 TempZoneActuatorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432576'): Active fault: 2024-05-01T01:00:00+01:00 TempZoneSensorCommunicationLost",
    ),
  ])
# ---
# name: test_system_warnings[hass_157546]
  list([
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432521'): Active fault: 2024-12-17T17:10:57+00:00 TempZoneActuatorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='3432576'): Active fault: 2024-05-01T01:00:00+01:00 TempZoneSensorCommunicationLost",
    ),
  ])
# ---
# name: test_system_warnings[system_002]
  list([
    tuple(
      'evohomeasync2',
      30,
      "HotWater(id='3933910'): Active fault: 2023-11-30T18:48:40+00:00 DHWSensorCommunicationLost",
    ),
  ])
# ---
# name: test_system_warnings[system_004]
  list([
    tuple(
      'evohomeasync2',
      30,
      'There are 4 locations. Reduce the risk of exceeding API rate limits by individually updating only necessary locations.',
    ),
    tuple(
      'evohomeasync2',
      30,
      "Gateway(id='2938388'): Active fault: 2023-05-04T18:47:36.772704+02:00 GatewayCommunicationLost",
    ),
  ])
# ---
# name: test_system_warnings[system_006]
  list([
    tuple(
      'evohomeasync2',
      30,
      "Unable to find IANA TZ identifier for 'NewYork'; DST support will be very limited",
    ),
    tuple(
      'evohomeasync2',
      30,
      'There are 2 locations. Reduce the risk of exceeding API rate limits by individually updating only necessary locations.',
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='0004'): Active fault: 2024-12-01T01:00:00+01:00 TempZoneActuatorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='0004'): Active fault: 2024-05-01T01:00:00+02:00 TempZoneSensorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='0004'): Active fault: 2024-12-01T01:00:00-01:00 TempZoneActuatorCommunicationLost",
    ),
    tuple(
      'evohomeasync2',
      30,
      "Zone(id='0004'): Active fault: 2024-05-01T01:00:00-01:00 TempZoneSensorCommunicationLost",
    ),
  ])
# ---
